--- a/debian/control
+++ b/debian/control
@@ -26,4 +26,4 @@ Description: hyperfast and lightweight templating for the Python platform
  straightforward and flexible models available, while also maintaining close
  ties to Python calling and scoping semantics.
  .
-  Homepage: http://mako.org/
+  Homepage: http://www.makotemplates.org/
