--- a/debian/rules
+++ b/debian/rules
@@ -31,6 +31,7 @@ binary-indep: build install
 	dh_testroot -i
 	dh_installchangelogs -i CHANGES
 	dh_installdocs -i
+	dh_installexamples -i
 	rm -rf debian/python-mako/usr/share/doc/python-mako/doc/build
 	dh_pycentral -i
 	dh_compress -i -X.py -Xmakotemplates.txt
