--- a/debian/rules
+++ b/debian/rules
@@ -3,7 +3,7 @@
 #export DH_VERBOSE=1
 
 DEB_UPSTREAM_VERSION=$(shell dpkg-parsechangelog \
-	| grep ^Version: | cut -d ' ' -f 2 | cut -d '-' -f 1)
+	| sed -rne 's,^Version: ([^-]+).*,\1,p')
 
 PYVERS=$(shell pyversions -vr)
 
@@ -12,7 +12,7 @@ clean:
 	dh_testroot
 	rm -f build-*
 	rm -rf build
-	find . -name *\.py[co] -exec rm {} \;
+	find . -name '*\.py[co]' -delete
 	dh_clean
 
 build:
