--- a/debian/rules
+++ b/debian/rules
@@ -25,6 +25,8 @@ install-python%:
 	# share Egg dir
 	mv debian/python-mako/usr/lib/python$*/site-packages/Mako-${DEB_UPSTREAM_VERSION}-py$*.egg-info \
 	   debian/python-mako/usr/lib/python$*/site-packages/Mako-${DEB_UPSTREAM_VERSION}.egg-info
+	# use default Python version in shebang
+	sed -i -e '1s,usr/bin/.*,usr/bin/python,' $(CURDIR)/debian/python-mako/usr/bin/mako-render
 
 binary-indep: build install
 	dh_testdir -i
@@ -32,6 +34,7 @@ binary-indep: build install
 	dh_installchangelogs -i CHANGES
 	dh_installdocs -i
 	dh_installexamples -i
+	dh_installman -i
 	rm -rf debian/python-mako/usr/share/doc/python-mako/doc/build
 	dh_pycentral -i
 	dh_compress -i -X.py -Xmakotemplates.txt
