--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Standards-Version: 3.8.0
 Homepage: http://www.makotemplates.org/
 XS-Python-Version: all
 Vcs-Svn: svn://svn.debian.org/python-modules/packages/mako/trunk
-Vcs-Browser: http://svn.debian.org/wsvn/python-modules/packages/mako/trunk/?op=log
+Vcs-Browser: http://svn.debian.org/viewsvn/python-modules/packages/mako/trunk/
 
 Package: python-mako
 Architecture: all
