--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 5.0.38)
 Build-Depends-Indep: python (>= 2.3.5-11), python-all-dev, python-central (>= 0.6.1), python-setuptools (>= 0.6b3-1~)
 Standards-Version: 3.8.0
 Homepage: http://www.makotemplates.org/
-XS-Python-Version: all
+XS-Python-Version: >= 2.4
 Vcs-Svn: svn://svn.debian.org/python-modules/packages/mako/trunk
 Vcs-Browser: http://svn.debian.org/viewsvn/python-modules/packages/mako/trunk/
 
