--- a/debian/control
+++ b/debian/control
@@ -4,8 +4,8 @@ Priority: optional
 Maintainer: Piotr Ożarowski <piotr@debian.org>
 Uploaders: Debian Python Modules Team <python-modules-team@lists.alioth.debian.org>
 Build-Depends: debhelper (>= 5.0.38)
-Build-Depends-Indep: python (>= 2.3.5-11), python-all-dev, python-central (>= 0.6.1), python-setuptools (>= 0.6b3-1~)
-Standards-Version: 3.8.0
+Build-Depends-Indep: python (>= 2.3.5-11), python-all, python-support (>= 0.6.4), python-setuptools (>= 0.6b3-1~)
+Standards-Version: 3.8.3
 Homepage: http://www.makotemplates.org/
 XS-Python-Version: >= 2.4
 Vcs-Svn: svn://svn.debian.org/python-modules/packages/mako/trunk
