--- a/debian/rules
+++ b/debian/rules
@@ -33,7 +33,7 @@ binary-indep: build install
 	dh_installexamples -i
 	dh_installman -i
 	rm -rf debian/python-mako/usr/share/doc/python-mako/doc/build
-	dh_pycentral -i
+	dh_pysupport -i
 	dh_compress -i -X.py -Xmakotemplates.txt
 	dh_fixperms -i
 	dh_installdeb -i
