Move python-beaker from Recommends to Suggests (closes: #569986)

--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,7 @@ Vcs-Browser: http://svn.debian.org/viewsvn/python-modules/packages/mako/trunk/
 Package: python-mako
 Architecture: all
 Depends: ${python:Depends}
-Recommends: python-beaker (>= 1.1)
+Suggests: python-beaker (>= 1.1)
 Enhances: python-pylons, python-turbogears, python-pygments
 XB-Python-Version: ${python:Versions}
 Description: fast and lightweight templating for the Python platform
