* New upstream release * Add python-markupsafe to Depends

--- a/debian/rules
+++ b/debian/rules
@@ -23,11 +23,10 @@ install: $(PYVERS:%=install-python%)
 	   $(CURDIR)/debian/python-mako/usr/share/vim/addons/indent/mako.vim
 
 install-python%:
+	python$* setup.py build_scripts	--executable=/usr/bin/python
 	python$* setup.py install --prefix=/usr \
 		--single-version-externally-managed \
 		--root $(CURDIR)/debian/python-mako
-	# use default Python version in shebang
-	sed -i -e '1s,usr/bin/.*,usr/bin/python,' $(CURDIR)/debian/python-mako/usr/bin/mako-render
 	# dpkg handles dependencies way better than Python
 	find $(CURDIR)/debian/python-mako -name requires.txt -type f -delete
 
