* Add python3-mako binary package * make_sure_2to3_is_used.patch added * Source format changed to 3.0 (quilt)

--- a/debian/rules
+++ b/debian/rules
@@ -3,6 +3,9 @@
 #export DH_VERBOSE=1
 
 PYVERS=$(shell pyversions -vr)
+PY3VERS=$(shell py3versions -vs)
+pkgdir = $(CURDIR)/debian/python$(if $(patsubst 3.%,,$(1)),,3)-mako
+-include /usr/share/python/python.mk
 
 clean:
 	dh_testdir
@@ -14,18 +17,18 @@ clean:
 
 build:
 
-install: $(PYVERS:%=install-python%)
+install: $(PYVERS:%=install-python%) $(PY3VERS:%=install-python%)
 	dh_install
 	mv $(CURDIR)/debian/python-mako/usr/share/vim/addons/indent/mako_indent.vim \
 	   $(CURDIR)/debian/python-mako/usr/share/vim/addons/indent/mako.vim
 
 install-python%:
 	python$* setup.py build_scripts	--executable=/usr/bin/python
-	python$* setup.py install --prefix=/usr \
+	python$* setup.py install $(py_setup_install_args) \
 		--single-version-externally-managed \
-		--root $(CURDIR)/debian/python-mako
+		--root $(call pkgdir,$*)
 	# dpkg handles dependencies way better than Python
-	find $(CURDIR)/debian/python-mako -name requires.txt -type f -delete
+	find $(call pkgdir,$*) -name requires.txt -type f -delete
 
 binary-indep: build install
 	dh_testdir -i
@@ -36,6 +39,9 @@ binary-indep: build install
 	dh_installman -i
 	rm -rf debian/python-mako/usr/share/doc/python-mako/doc/build
 	dh_pysupport -i
+	# TODO: new name for Py3k's mako-render
+	rm -f $(call pkgdir,3.X)/usr/bin/mako-render
+	dh_python3 -i
 	dh_compress -i -X.py -Xmakotemplates.txt
 	dh_fixperms -i
 	dh_installdeb -i
