--- a/debian/control
+++ b/debian/control
@@ -14,8 +14,8 @@ Standards-Version: 3.9.3
 Homepage: http://www.makotemplates.org/
 X-Python-Version: >= 2.4
 X-Python3-Version: >= 3.0
-Vcs-Svn: svn://svn.debian.org/python-modules/packages/mako/trunk
-Vcs-Browser: http://svn.debian.org/viewsvn/python-modules/packages/mako/trunk/
+Vcs-Svn: svn://anonscm.debian.org/python-modules/packages/mako/trunk/
+Vcs-Browser: http://anonscm.debian.org/viewvc/python-modules/packages/mako/trunk/
 
 Package: python-mako
 Architecture: all
