* New upstream release * Add python-changelog and python-sphinx-paramlinks to Build-Depends   (needed while rebuilding documentation) * Enable Python 3.X tests during build (add necessary packages to   Build-Depends) * Update links to upstream changelog (now points to changelog.rst) * Add lintian override for source-is-missing doc/searchindex.js   (this file is generated by sphinx-build, all sources are in the tarball)

--- a/debian/control
+++ b/debian/control
@@ -7,9 +7,10 @@ Build-Depends: debhelper (>= 5.0.38)
 Build-Depends-Indep: python-all, python-setuptools,
  python3-all, python3-setuptools,
 # to rebuild docs:
- python-sphinx,
+ python-sphinx, python-changelog, python-sphinx-paramlinks,
 # for tests:
- python-nose, python-markupsafe
+ python-nose, python-markupsafe, python-mock,
+ python3-nose, python3-markupsafe, python3-mock
 Standards-Version: 3.9.5
 Homepage: http://www.makotemplates.org/
 X-Python-Version: >= 2.4
