--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Build-Depends-Indep: python-all, python-setuptools,
  python-sphinx, python-changelog, python-sphinx-paramlinks,
 # for tests:
  python-nose, python-markupsafe, python-mock,
- python3-nose, python3-markupsafe, python3-mock
+ python3-nose, python3-markupsafe, python3-mock, python3-funcsigs
 Standards-Version: 3.9.5
 Homepage: http://www.makotemplates.org/
 X-Python-Version: >= 2.4
