--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,10 @@ tag_svn_revision = 0
 [wheel]
 universal = 1
 
+[pytest]
+addopts = --tb native -v -r fxX
+python_files = test/*test_*.py
+
 [upload]
 sign = 1
 identity = C4DAFEE1
