--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,7 @@ Build-Depends-Indep: python-all, python-setuptools,
 Standards-Version: 3.9.6
 Homepage: http://www.makotemplates.org/
 X-Python-Version: >= 2.4
-Vcs-Git: git://anonscm.debian.org/python-modules/packages/mako.git
+Vcs-Git: https://anonscm.debian.org/git/python-modules/packages/mako.git
 Vcs-Browser: https://anonscm.debian.org/cgit/python-modules/packages/mako.git
 
 Package: python-mako
