--- a/debian/control
+++ b/debian/control
@@ -9,9 +9,9 @@ Build-Depends-Indep: python-all, python-setuptools,
 # to rebuild docs:
  python-sphinx, python-changelog, python-sphinx-paramlinks,
 # for tests:
- python-nose, python-markupsafe, python-mock,
- python3-nose, python3-markupsafe, python3-mock
 Standards-Version: 3.9.6
+ python-pytest, python-markupsafe, python-mock,
+ python3-pytest, python3-markupsafe, python3-mock
 Homepage: http://www.makotemplates.org/
 X-Python-Version: >= 2.4
 Vcs-Git: https://anonscm.debian.org/git/python-modules/packages/mako.git
