debian: work-around multi-arch usability
We need a work-around to enable mesa cross-compiling on CI for it's
taking too much time to do full native builds. From Debian bug 769380 we
know this is actually a unresolved problem about interpretor multiarch
implementation, but I just need this badly so the best work-arounds so
far is to mark python-mako as multi-arch foreign and remove
python-markupsafe completely from dependecy chain.

[1]: https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=769380
[2]: https://wiki.debian.org/HelmutGrohne/MultiarchSpecChanges#Interpreter_issue

Closes: https://github.com/laarid/package_debian-mesa/issues/2

--- a/debian/control
+++ b/debian/control
@@ -9,8 +9,8 @@ Build-Depends-Indep: python-all, python-setuptools,
 # to rebuild docs:
  python-sphinx, python-changelog, python-sphinx-paramlinks,
 # for tests:
- python-pytest, python-markupsafe, python-mock,
- python3-pytest, python3-markupsafe, python3-mock
+ python-pytest, python-mock,
+ python3-pytest, python3-mock
 Standards-Version: 3.9.8
 Homepage: http://www.makotemplates.org/
 X-Python-Version: >= 2.4
@@ -19,6 +19,7 @@ Vcs-Browser: https://anonscm.debian.org/cgit/python-modules/packages/mako.git
 
 Package: python-mako
 Architecture: all
+Multi-Arch: foreign
 Depends: ${python:Depends}, ${misc:Depends}
 Suggests: python-beaker (>= 1.1), python-mako-doc
 Enhances: python-pylons, python-turbogears, python-pygments
@@ -34,6 +35,7 @@ Description: fast and lightweight templating for the Python platform
 
 Package: python3-mako
 Architecture: all
+Multi-Arch: foreign
 Depends: ${python3:Depends}, ${misc:Depends}
 Suggests: ${python3:Suggests}, python3-beaker, python-mako-doc
 Description: fast and lightweight templating for the Python 3 platform
