--- a/.bintray.json.in
+++ b/.bintray.json.in
@@ -16,9 +16,9 @@
 
     "version": {
         "name": "@BINTRAY_VERSION@",
-        "desc": "v@BINTRAY_VERSION@ release",
+        "desc": "@BINTRAY_VERSION@ release",
         "released": "@BINTRAY_RELEASE_DATE@",
-        "vcs_tag": "v@BINTRAY_VERSION@",
+        "vcs_tag": "@BINTRAY_VERSION@",
         "gpgSign": false
     },
 
